Fixing some spacing

--- a/next/src/styles/globals.css
+++ b/next/src/styles/globals.css
@@ -36,3 +36,9 @@ body {
     }
 
 }
+
+@layer components {
+    .card {
+        @apply rounded-md;
+    }
+}
